@@ -73,6 +73,8 @@ private slots:
     void test_requestPatternTranspose_shouldTransposePattern();
     void test_requestSelectionTranspose_shouldTransposeSelection();
 
+    void test_requestLinearVelocityInterpolation_shouldInterpolateVelocities();
+
     void test_requestPosition_invalidPosition_shouldNotChangePosition();
     void test_requestPosition_validPosition_shouldChangePosition();
 
