@@ -15,6 +15,8 @@ New features:
 
 * Implement line selection and transpose
 
+* Implement context menu action to interpolate velocity
+
 * Set different color for each track
 
 Bug fixes:
